--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
-  "name": "nft-wearable",
+  "name": "wearables-nfts",
   "author": {
-    "name": "Will Holcomb",
+    "name": "dysbulic",
     "email": "dys@dhappy.org"
   },
-  "version": "0.2.0",
+  "version": "0.3.0",
   "keywords": [
     "ethereum",
     "virtual reality",
     "nft",
     "wearable"
   ],
-  "license": "MIT",
+  "license": "CC0",
   "private": true,
   "scripts": {
-    "react-app:build": "yarn workspace nft-wearable-app build --max-old-space-size=12288",
-    "react-app:eject": "yarn workspace nft-wearable-app eject",
-    "react-app:start": "yarn workspace nft-wearable-app start",
-    "react-app:test": "yarn workspace nft-wearable-app test",
-    "react-app:deploy": "yarn workspace nft-wearable-app deploy",
-    "build": "yarn workspace nft-wearable-app build --max-old-space-size=12288",
+    "react-app:build": "yarn workspace wearables-nfts-app build --max-old-space-size=12288",
+    "react-app:eject": "yarn workspace wearables-nfts-app eject",
+    "react-app:start": "yarn workspace wearables-nfts-app start",
+    "react-app:test": "yarn workspace wearables-nfts-app test",
+    "react-app:deploy": "yarn workspace wearables-nfts-app deploy",
+    "build": "yarn workspace wearables-nfts-app build --max-old-space-size=12288",
     "chain": "yarn workspace @scaffold-eth/hardhat chain",
     "fork": "yarn workspace @scaffold-eth/hardhat fork",
     "node": "yarn workspace @scaffold-eth/hardhat chain",
     "test": "yarn workspace @scaffold-eth/hardhat test",
-    "start": "yarn workspace nft-wearable-app start",
+    "start": "yarn workspace wearables-nfts-app start",
     "compile": "yarn workspace @scaffold-eth/hardhat compile",
     "deploy": "yarn workspace @scaffold-eth/hardhat deploy",
     "watch": "yarn workspace @scaffold-eth/hardhat watch",
     "accounts": "yarn workspace @scaffold-eth/hardhat accounts",
     "balance": "yarn workspace @scaffold-eth/hardhat balance",
     "send": "yarn workspace @scaffold-eth/hardhat send",
-    "ipfs": "yarn workspace nft-wearable-app ipfs",
-    "surge": "yarn workspace nft-wearable-app surge",
-    "s3": "yarn workspace nft-wearable-app s3",
-    "ship": "yarn workspace nft-wearable-app ship",
+    "ipfs": "yarn workspace wearables-nfts-app ipfs",
+    "surge": "yarn workspace wearables-nfts-app surge",
+    "s3": "yarn workspace wearables-nfts-app s3",
+    "ship": "yarn workspace wearables-nfts-app ship",
     "generate": "yarn workspace @scaffold-eth/hardhat generate",
     "account": "yarn workspace @scaffold-eth/hardhat account",
     "mineContractAddress": "cd packages/hardhat && npx hardhat mineContractAddress",
@@ -51,8 +51,8 @@
     "graph-deploy-local": "yarn workspace @scaffold-eth/subgraph graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 scaffold-eth/your-contract",
     "graph-ship-local": "yarn graph-prepare && yarn graph-codegen && yarn graph-deploy-local",
     "deploy-and-graph": "yarn deploy && yarn graph-ship-local",
-    "theme": "yarn workspace nft-wearable-app theme",
-    "watch-theme": "yarn workspace nft-wearable-app watch"
+    "theme": "yarn workspace wearables-nfts-app theme",
+    "watch-theme": "yarn workspace wearables-nfts-app watch"
   },
   "workspaces": {
     "packages": [
