--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,12 @@ packages/subgraph/subgraph.yaml
 packages/subgraph/generated
 packages/subgraph/abis
 packages/hardhat/*.txt
+**/*.dbg.json
 **/aws.json
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 **/node_modules
-packages/hardhat/artifacts
 packages/hardhat/deployments
-packages/react-app/src/contracts/*
-!packages/react-app/src/contracts/contracts.js
 packages/hardhat/cache
 
 docker/**/data
